# cli-toolbox-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md  cli-debugging.rs  cli-eval.rs  cli-release.rs  cli-reporting.rs
scipts-ps/: build.ps1  clippy.ps1  docs.ps1  publish.ps1  test-clean.ps1  test.ps1
scripts-bash/: build.sh  clippy.sh  docs.sh  publish.sh  test-clean.sh  test.sh
scripts-ps/: clippy.ps1  publish.ps1  test-clean.ps1  test.ps1
src/: debug.rs  eval.rs  lib.rs  release.rs  report.rs  report_macro_anatomy_doc.md  verbosity.rs
src/common/: mod.rs  parse.rs  tokenize.rs  tracing.rs
src/debug/: mod.rs  parse.rs  tokenize.rs
src/debug_macro/: mod.rs  parse.rs  tokenize.rs
src/docs/: report_macro_anatomy_doc.md  report_macro_doc.md
src/eval/: mod.rs  parse.rs  tokenize.rs
src/eval_macro/: mod.rs  parse.rs  tokenize.rs
src/release/: mod.rs  parse.rs  tokenize.rs
src/release_macro/: mod.rs  parse.rs  tokenize.rs
src/report/: mod.rs  parse.rs  tokenize.rs
src/report_macro/: mod.rs  parse.rs  tokenize.rs
src/tests/: debug_tests.rs  eval_tests.rs  mod.rs  release_tests.rs  report_tests.rs  version.rs
src/tests/utils/: actual.rs  capture.rs  err.rs  expect.rs  mod.rs  out.rs
tests/: debug_macro_message_argument_tests.rs  debug_macro_tests.rs  eval_macro_tests_quite_verbosity.rs  eval_macro_tests_terse_verbosity.rs  eval_macro_tests_verbose_verbosity.rs  release_macro_tests_quite_verbosity.rs  release_macro_tests_terse_verbosity.rs  release_macro_tests_verbose_verbosity.rs  releasel_macro_tests_terse_verbosity.rs  report_macro_message_argument_tests_quite_verbosity.rs  report_macro_message_argument_tests_terse_verbosity.rs  report_macro_message_argument_tests_verbose_verbosity.rs  report_macro_tests_quite_verbosity.rs  report_macro_tests_terse_verbosity.rs  report_macro_tests_verbose_verbosity.rs  tests.rs
tests/eval_compile_fails/: duplicate_verbosity_should_fail_compiles.rs  duplicate_verbosity_should_fail_compiles.stderr  incorrect_order_should_fail_compiles.rs  incorrect_order_should_fail_compiles.stderr  incorrect_verbosity_should_fail_compiles.rs  incorrect_verbosity_should_fail_compiles.stderr
tests/release_compile_fails/: duplicate_verbosity_should_fail_compiles.rs  duplicate_verbosity_should_fail_compiles.stderr  incorrect_order_should_fail_compiles.rs  incorrect_order_should_fail_compiles.stderr  incorrect_verbosity_should_fail_compiles.rs  incorrect_verbosity_should_fail_compiles.stderr
tests/report_compile_failed/: duplicate_verbosity_should_fail_compiles.rs  duplicate_verbosity_should_fail_compiles.stderr  incorrect_order_should_fail_compiles.stderr  missing_semicolons_should_fail_compiles.stderr
tests/report_compile_fails/: duplicate_verbosity_should_fail_compiles.rs  duplicate_verbosity_should_fail_compiles.stderr  incorrect_order_should_fail_compiles.rs  incorrect_order_should_fail_compiles.stderr  missing_semicolons_should_fail_compiles.rs  missing_semicolons_should_fail_compiles.stderr
