[package]
name = "cli-toolbox"
version = "0.5.1"
edition = "2018"
description = "Utility library for working with cli output ergonomically"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/cli-toolbox-rs"
repository = "https://github.com/Nejat/cli-toolbox-rs"
keywords = ["cli", "output", "report", "verbosity", "debug"]
categories = ["command-line-interface"]
authors = ["Nejat<nejatoz@gmail.com>"]

[dependencies]
cfg-if = "1.0"
lazy_static = "1.4"
parking_lot = "0.11"

[dev-dependencies]
gag = "1.0"
version-sync = "0.9"

[features]
default = []
all = ["debug", "eval", "release", "report"]
debug = []
eval = []
release = []
report = []

[[example]]
name = "cli-debugging"
path = "examples/cli-debugging.rs"
required-features = ["debug", "report"]

[[example]]
name = "cli-reporting"
path = "examples/cli-reporting.rs"
required-features = ["debug", "report"]

[[example]]
name = "cli-release"
path = "examples/cli-release.rs"
required-features = ["debug", "report", "release"]
