[package]
name = "cli-toolbox"
version = "0.6.1"
edition = "2021"
description = "Utility library for working with cli output ergonomically"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/cli-toolbox-rs"
repository = "https://github.com/Nejat/cli-toolbox-rs"
keywords = ["cli", "output", "report", "verbosity", "debug"]
categories = ["command-line-interface"]
authors = ["Nejat<nejatoz@gmail.com>"]

[package.metadata.docs.rs]
features = ["all"]

[lib]
proc-macro = true

[dependencies]
cfg-if = "1"
lazy_static = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
verbosity = { version = "0.1", optional = true }

[dev-dependencies]
macrofied-toolbox = { version = "0.3", features = ["result"] }
test-toolbox = { version = "0.4", features = ["all"] }
trybuild = { version = "1", features = ["diff"] }
version-sync = "0.9"

[[test]]
name = "macro-tests"
path = "tests/tests.rs"

[features]
default = []
all = ["debug", "eval", "release", "report"]
debug = []
eval = ["verbosity"]
release = ["verbosity"]
report = ["verbosity"]
trace = [] # feature should only be used for tests or examples

[[example]]
name = "cli-debugging"
path = "examples/cli-debugging.rs"
required-features = ["debug", "report"]

[[example]]
name = "cli-reporting"
path = "examples/cli-reporting.rs"
required-features = ["report"]

[[example]]
name = "cli-eval"
path = "examples/cli-eval.rs"
required-features = ["debug", "eval", "report"]

[[example]]
name = "cli-release"
path = "examples/cli-release.rs"
required-features = ["debug", "release", "report"]
